--- a/assets/main.scss
+++ b/assets/main.scss
@@ -35,6 +35,4 @@ $on-laptop:        800px;
 //     }
 // }
 
-// Import partials from the `minima` theme.
-// @import "minima";
-@import "minima";
+@import "materialize";
