--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+  <div class="container">
 
     <h2 class="footer-heading">{{ site.title | escape }}</h2>
 
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
+    <div class="row">
+      <div class="col s4">
         <ul class="contact-list">
           <li>
             {% if site.author %}
@@ -20,7 +20,7 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-2">
+      <div class="col s4">
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
@@ -36,7 +36,7 @@
         </ul>
       </div>
 
-      <div class="footer-col footer-col-3">
+      <div class="col s4">
         <p>{{ site.description | escape }}</p>
       </div>
     </div>
