--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,10 @@
     {% include header.html %}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
+      <div class="container">
+        <div class="row">
+          <div class="col s12">{{ content }}</div>
+        </div>
       </div>
     </main>
 
