--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,5 +34,6 @@ $on-laptop:        800px;
 //         padding-left: $spacing-unit / 2;
 //     }
 // }
+$roboto-font-path: "/assets/fonts/roboto/" !default;
 
 @import "materialize";
