partially converted to materialize, carousel work but not with cache disabled.. weird.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,7 @@
     {% include header.html %}
 
     <main class="page-content" aria-label="Content">
-      <div class="container">
-        <div class="row">
-          <div class="col s12">{{ content }}</div>
-        </div>
-      </div>
+      {{ content }}
     </main>
 
     {% include footer.html %}
