--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,6 +34,14 @@ $on-laptop:        800px;
 //         padding-left: $spacing-unit / 2;
 //     }
 // }
-$roboto-font-path: "/assets/fonts/roboto/" !default;
+$navbar-font-color: #333;
 
+$roboto-font-path: "/assets/fonts/roboto/" !default;
+// $primary-color: color("teal", "lighten-1");
 @import "materialize";
+$primary-color: $cyan;
+nav {
+  background-color: white;
+}
+
+
