--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,12 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="container">
 
-  <div class="post-content">
-    {{ content }}
+  <div class="row">
+    <div class="col s12">
+      {{ content }}
+    </div>
   </div>
 
 </article>
