change carousel-item to div from anchor

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,9 @@ layout: default
 <article class="post">
 
   <div class="carousel carousel-slider">
-    <a class="carousel-item" href="#1"><img src="/assets/images/carousel/banner_1.jpg" alt=""></a>
-    <a class="carousel-item" href="#2"><img src="/assets/images/carousel/banner_2.jpg" alt=""></a>
-    <a class="carousel-item" href="#3"><img src="/assets/images/carousel/banner_3.jpg" alt=""></a>
+    <div class="carousel-item" href="#1"><img src="/assets/images/carousel/banner_1.jpg" alt=""></div>
+    <div class="carousel-item" href="#2"><img src="/assets/images/carousel/banner_2.jpg" alt=""></div>
+    <div class="carousel-item" href="#3"><img src="/assets/images/carousel/banner_3.jpg" alt=""></div>
   </div>
 
 
