add livereload feature with guard

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,4 +15,14 @@
 
   </body>
 
+<!-- dev:start -->
+<script>
+  var url = '<script src=\"http:\/\/'
+          + window.location.hostname
+          + ':35729\/livereload.js?snipver=1\"><\/script>';
+  document.write(url);
+</script>
+<!-- dev:end -->
+
+
 </html>
