carousel changed to slider

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,30 @@ layout: default
 ---
 <article class="post">
 
-  <div class="carousel carousel-slider">
-    <div class="carousel-item" href="#1"><img src="/assets/images/carousel/banner_1.jpg" alt=""></div>
-    <div class="carousel-item" href="#2"><img src="/assets/images/carousel/banner_2.jpg" alt=""></div>
-    <div class="carousel-item" href="#3"><img src="/assets/images/carousel/banner_3.jpg" alt=""></div>
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="/assets/images/carousel/banner_1.jpg" alt="">
+        <div class="caption left-align">
+          <h3>Selamat Datang ke</h3>
+          <h5 class="light grey-text-text-lighten-3">City Car Park</h5>
+        </div>
+      </li>
+      <li>
+        <img src="/assets/images/carousel/banner_2.jpg" alt="">
+        <div class="caption right-align">
+          <h3>Selamat Datang ke</h3>
+          <h5 class="light grey-text-text-lighten-3">City Car Park</h5>
+        </div>
+      </li>
+      <li>
+        <img src="/assets/images/carousel/banner_3.jpg" alt="">
+        <div class="caption center-align">
+          <h3>Selamat Datang ke</h3>
+          <h5 class="light grey-text-text-lighten-3">City Car Park</h5>
+        </div>
+      </li>
+    </ul>
   </div>
 
 
