converting pages to support multilanguages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,11 @@
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 
         <ul class="right hide-on-med-and-down">
-          {% include nav-main.ms.html %}
+          {% if site.lang == "ms"}
+            {% include nav-main.ms.html %}
+          {% else %}
+            {% include nav-main.en.html %}
+          {% endif %}
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
