--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "ms" }}">
+<html>
+<!-- <html lang="{{ page.lang | default: site.lang | default: "ms" }}"> -->
 
   {% include head.html %}
 
