--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,6 +29,8 @@ layout: default
     </ul>
   </div>
 
+    <h1>{% t global.welcome %}</h1>
+    <p>{{ site.lang }}</p>
 
   <div class="container">
     <div class="row">
