--- a/_includes/nav-main.ms.html
+++ b/_includes/nav-main.ms.html
@@ -1,7 +1,7 @@
 <li {% if page.url == "/" %} class="active" {% endif %}><a href="/">{% t menu.home %}</a></li>
 <li {% if page.url == "/perkhidmatan" %} class="active" {% endif %}><a href="/perkhidmatan">{% t menu.service %}</a></li>
 <li>
-  <a class="dropdown-button" href="#" data-activates="nav-products">Produk<i class="material-icons right">arrow_drop_down</i></a>
+  <a class="dropdown-button" href="#" data-activates="nav-products">{% t menu.product %}<i class="material-icons right">arrow_drop_down</i></a>
   <ul id="nav-products" class="dropdown-content">
     <li><a href="#">CWT Terminal</a></li>
     <li><a href="#">Applikasi Telefon Pintar</a></li>
@@ -10,7 +10,7 @@
   </ul>
 </li>
 <li>
-  <a class="dropdown-button" href="#" data-activates="nav-operations">Operasi<i class="material-icons right">arrow_drop_down</i></a>
+  <a class="dropdown-button" href="#" data-activates="nav-operations">{% t menu.operation %}<i class="material-icons right">arrow_drop_down</i></a>
   <ul id="nav-operations" class="dropdown-content">
     <li><a href="#">Terminal</a></li>
     <li><a href="#">Pas Bulanan Digital</a></li>
@@ -19,6 +19,6 @@
     <li><a href="#">Kadar</a></li>
   </ul>
 </li>
-<li><a href="#">Hubungi</a></li>
+<li><a href="#">{% t menu.contact %}</a></li>
 <li><a href="{{ site.baseurl_root }}/">MS</a></li>
 <li><a href="{{ site.baseurl_root }}/en">EN</a></li>
