all function working.. next is to create each pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,11 +9,11 @@
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 
         <ul class="right hide-on-med-and-down">
-          {% include nav-main.ms.html %}
+          {% include nav-main.html %}
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
-          {% include nav-main-mobile.ms.html %}
+          {% include nav-main-mobile.html %}
         </ul>
 
       </div>
