--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,12 +1,18 @@
-<li {% if page.url == "/" %} class="active" {% endif %}><a href="/">{% t menu.home %}</a></li>
-<li {% if page.url == "/perkhidmatan" %} class="active" {% endif %}><a href="/perkhidmatan">{% t menu.service %}</a></li>
+{% capture pageurl %}{% if site.lang == "en" %}/{{ site.lang }}{% endif %}{{ page.url }}{% endcapture %}
+<li {% if page.url == "/" %} class="active" {% endif %}>
+  <a href="{{ site.baseurl | append: "/" }}">{% t menu.home %}</a>
+</li>
+{% capture service %}{% tl perkhidmatan %}{% endcapture %}
+<li {% if pageurl == service %} class="active" {% endif %}>
+  <a href="{{ service }}">{% t menu.service %}</a>
+</li>
 <li>
   <a class="dropdown-button" href="#" data-activates="nav-products">{% t menu.product %}<i class="material-icons right">arrow_drop_down</i></a>
   <ul id="nav-products" class="dropdown-content">
-    <li><a href="#">CWT Terminal</a></li>
-    <li><a href="#">Applikasi Telefon Pintar</a></li>
-    <li><a href="#">Pas Bulanan Digital</a></li>
-    <li><a href="#">Petak Khas</a></li>
+    <li><a href="#">{% t menu_product.cwt %}</a></li>
+    <li><a href="#">{% t menu_product.app %}</a></li>
+    <li><a href="#">{% t menu_product.pas_bulanan %}</a></li>
+    <li><a href="#">{% t menu_product.petak_khas %}</a></li>
   </ul>
 </li>
 <li>
@@ -19,6 +25,7 @@
     <li><a href="#">Kadar</a></li>
   </ul>
 </li>
+<!-- {% capture contact %}{% tl ontact %}{% endcapture %} -->
 <li><a href="#">{% t menu.contact %}</a></li>
 <li><a href="{{ site.baseurl_root }}/">MS</a></li>
 <li><a href="{{ site.baseurl_root }}/en">EN</a></li>
