--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -26,6 +26,6 @@
   </ul>
 </li>
 <!-- {% capture contact %}{% tl ontact %}{% endcapture %} -->
-<li><a href="#">{% t menu.contact %}</a></li>
+<li><a href="{% tl contact %}">{% t menu.contact %}</a></li>
 <li><a href="{{ site.baseurl_root }}/">MS</a></li>
 <li><a href="{{ site.baseurl_root }}/en">EN</a></li>
