nested menu instead of creating another root node

--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -9,10 +9,10 @@
 <li>
   <a class="dropdown-button" href="#" data-activates="nav-products">{% t menu.product %}<i class="material-icons right">arrow_drop_down</i></a>
   <ul id="nav-products" class="dropdown-content">
-    <li><a href="#">{% t menu_product.cwt %}</a></li>
-    <li><a href="#">{% t menu_product.app %}</a></li>
-    <li><a href="#">{% t menu_product.pas_bulanan %}</a></li>
-    <li><a href="#">{% t menu_product.petak_khas %}</a></li>
+    <li><a href="#">{% t menu.products.cwt %}</a></li>
+    <li><a href="#">{% t menu.products.app %}</a></li>
+    <li><a href="#">{% t menu.products.pas_bulanan %}</a></li>
+    <li><a href="#">{% t menu.products.petak_khas %}</a></li>
   </ul>
 </li>
 <li>
