--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -11,18 +11,18 @@
   <ul id="nav-products" class="dropdown-content">
     <li><a href="#">{% t menu.products.cwt %}</a></li>
     <li><a href="#">{% t menu.products.app %}</a></li>
-    <li><a href="#">{% t menu.products.pas_bulanan %}</a></li>
-    <li><a href="#">{% t menu.products.petak_khas %}</a></li>
+    <li><a href="#">{% t menu.products.season_pass %}</a></li>
+    <li><a href="#">{% t menu.products.reserve_bay %}</a></li>
   </ul>
 </li>
 <li>
   <a class="dropdown-button" href="#" data-activates="nav-operations">{% t menu.operation %}<i class="material-icons right">arrow_drop_down</i></a>
   <ul id="nav-operations" class="dropdown-content">
-    <li><a href="#">Terminal</a></li>
-    <li><a href="#">Pas Bulanan Digital</a></li>
-    <li><a href="#">Petak khas</a></li>
-    <li><a href="#">Kompaun</a></li>
-    <li><a href="#">Kadar</a></li>
+    <li><a href="#">{% t menu.operations.terminal %}</a></li>
+    <li><a href="#">{% t menu.operations.season_pass %}</a></li>
+    <li><a href="#">{% t menu.operations.reserve_bay %}</a></li>
+    <li><a href="#">{% t menu.operations.compound %}</a></li>
+    <li><a href="#">{% t menu.operations.rate %}</a></li>
   </ul>
 </li>
 <!-- {% capture contact %}{% tl ontact %}{% endcapture %} -->
