product -> cwt terminal complete

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -44,6 +44,13 @@ nav {
   background-color: white;
 }
 
+.page-content {
+  margin-top: 30px;
+  .slider {
+    margin-top: -30px;
+  }
+}
+
 .slider {
   .caption {
     text-shadow: 2px 2px 5px rgba(0,0,0, .7);
