--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -9,7 +9,7 @@
 <li>
   <a class="dropdown-button" href="#" data-activates="nav-products">{% t menu.product %}<i class="material-icons right">arrow_drop_down</i></a>
   <ul id="nav-products" class="dropdown-content">
-    <li><a href="#">{% t menu.products.cwt %}</a></li>
+    <li><a href="{% tl cwt_terminal %}">{% t menu.products.cwt %}</a></li>
     <li><a href="#">{% t menu.products.app %}</a></li>
     <li><a href="#">{% t menu.products.season_pass %}</a></li>
     <li><a href="#">{% t menu.products.reserve_bay %}</a></li>
