--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -11,8 +11,8 @@
   <ul id="nav-products" class="dropdown-content">
     <li><a href="{% tl cwt_terminal %}">{% t menu.products.cwt %}</a></li>
     <li><a href="{% tl app %}">{% t menu.products.app %}</a></li>
-    <li><a href="#">{% t menu.products.season_pass %}</a></li>
-    <li><a href="#">{% t menu.products.reserve_bay %}</a></li>
+    <li><a href="{% tl season_pass %}">{% t menu.products.season_pass %}</a></li>
+    <li><a href="{% tl reserve_bay %}">{% t menu.products.reserve_bay %}</a></li>
   </ul>
 </li>
 <li>
