--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,12 @@
 <header class="site-header" role="banner">
-
+  <div class="nav-wrapper lang-bar">
+    <div class="container">
+      <div class="right-align">
+        <a href="{{ site.baseurl_root }}/"><img src="/assets/images/ms_my.gif" alt="Bahasa Malaysia"></a>
+        <a href="{{ site.baseurl_root }}/en"><img src="/assets/images/en_gb.gif" alt="English (UK)"></a>
+      </div>
+    </div>
+  </div>
   <nav>
     <div class="nav-wrapper">
 
