--- a/assets/main.scss
+++ b/assets/main.scss
@@ -56,3 +56,24 @@ nav {
     text-shadow: 2px 2px 5px rgba(0,0,0, .7);
   }
 }
+
+.lang-bar {
+  background-color: #000;
+  a {
+    padding-left: 5px;
+  }
+}
+
+.redbox {
+  background-color: #fc2a1c;
+  color: #fc2a1c;
+}
+.bluebox {
+  background-color: #103ffb;
+  color: #103ffb;
+}
+.yellowbox {
+  background-color: #fffa38;
+  color: #fffa38;
+}
+
