--- a/_includes/nav-main-mobile.html
+++ b/_includes/nav-main-mobile.html
@@ -11,18 +11,18 @@
   <ul>
     <li><a href="{% tl cwt_terminal %}">{% t menu.products.cwt %}</a></li>
     <li><a href="{% tl app %}">{% t menu.products.app %}</a></li>
-    <li><a href="{% tl season_pass %}">{% t menu.products.season_pass %}</a></li>
-    <li><a href="{% tl reserve_bay %}">{% t menu.products.reserve_bay %}</a></li>
+    <li><a href="{% tl product_season_pass %}">{% t menu.products.season_pass %}</a></li>
+    <li><a href="{% tl product_reserve_bay %}">{% t menu.products.reserve_bay %}</a></li>
   </ul>
 </li>
 <li><div class="divider"></div></li>
 <li><a class="subheader" href="#">Operasi</a>
   <ul>
     <li><a href="{% tl terminal_ops %}">{% t menu.operations.terminal %}</a></li>
-    <li><a href="{% tl season_pass %}">{% t menu.operations.season_pass %}</a></li>
-    <li><a href="{% tl reserve_bay %}">{% t menu.operations.reserve_bay %}</a></li>
+    <li><a href="{% tl operation_season_pass %}">{% t menu.operations.season_pass %}</a></li>
+    <li><a href="{% tl operation_reserve_bay %}">{% t menu.operations.reserve_bay %}</a></li>
     <li><a href="{% tl compound %}">{% t menu.operations.compound %}</a></li>
-    <li><a href="{% tl ratet %}">{% t menu.operations.rate %}</a></li>
+    <li><a href="{% tl rate %}">{% t menu.operations.rate %}</a></li>
   </ul>
 </li>
 <li><div class="divider"></div></li>
