--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,7 +8,7 @@ $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
+$base-line-height: 2.5px;
 
 $spacing-unit:     30px;
 
@@ -38,10 +38,19 @@ $navbar-font-color: #333;
 
 $roboto-font-path: "/assets/fonts/roboto/" !default;
 // $primary-color: color("teal", "lighten-1");
+
 @import "materialize";
+
 $primary-color: $cyan;
+
+html {
+  line-height: 1.8;
+}
+
 nav {
   background-color: white;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 .page-content {
@@ -77,3 +86,19 @@ nav {
   color: #fffa38;
 }
 
+.collapsible-body {
+  p {
+    padding: 0;
+    padding-top: 2rem;
+    &:first-child {
+      padding-top: 0;
+    }
+  }
+  padding: 2rem;
+}
+
+// #terms {
+//   ul {
+//     list-style-type: disc;
+//   }
+// }
