fix rate, spelling, footer languange, embed map

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,9 @@
     <div class="row">
       <div class="col s6">
         <p>
-          Untuk malumat lanjut hubungi <strong>citycarpark helpline</strong><br />
+          {% t global.footer_text1 %}<br />
           <a href="#" onclick="event.preventDefault()">{{ site.cs_phone }}</a><br />
-          atau e-mel ke Pusat Khidmat Pelanggan<br />
+          {% t global.footer_text2 %}<br />
           <a href="mailto:{{ site.cs_email }}">{{ site.cs_email }}</a>
         </p>
       </div>
@@ -31,9 +31,10 @@
 <script src="/assets/js/bin/materialize.min.js"></script>
 <script src="/assets/js/modal.js"></script>
 <script src="/assets/js/scripts.js"></script>
-{% capture rate %}{% tl rate %}{% endcapture %}
-{% if pageurl == rate %}
-<script src="https://unpkg.com/vue/dist/vue.min.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="/assets/js/search.js"></script>
+{% capture contact %}{% tl contact %}{% endcapture %}
+{% if pageurl == contact %}
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7HjysPgMxnp3J2hkEzRnB5NfuZzo_exw&callback=initMap">
+<!-- <script src="https://unpkg.com/vue/dist/vue.min.js"></script> -->
+<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+<!-- <script src="/assets/js/search.js"></script> -->
 {% endif %}
