--- a/assets/main.scss
+++ b/assets/main.scss
@@ -97,8 +97,8 @@ nav {
   padding: 2rem;
 }
 
-// #terms {
-//   ul {
-//     list-style-type: disc;
-//   }
-// }
+#map {
+  vertical-align: center;
+  height: 300px;
+  width: 90%;
+}
